adds stats to storage and health check to receiver
